--- a/assets/css/modified.css
+++ b/assets/css/modified.css
@@ -387,11 +387,17 @@
     margin-right: 10px;
 }
 .profile-pic-sm{
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
+    object-fit: cover;
+    margin-right: 10px;
 }
 .friendList{
     border: 1px solid gray;
     text-align: left;
     margin-left: 10px;
     margin-bottom: 10px;
+}#reqBtn{
+    margin-left: 10px;
 }
